fix: robust CORS config - permit OPTIONS preflight and fix security level CORS handling